# full-stack-reasonml-country-select

./: .env  .gitignore  Dockerfile  Makefile  README.md  dune-project  full-stack-reasonml-country-select.opam  package.json
assets/: index.css
src/client/: app.re
src/server/: Api_Countries.re  dune  server.re
src/universal/js/: dune
src/universal/js/client-bidings/: Bindings_Float.re  Bindings_Js.re  Json.re
src/universal/native/: dune
src/universal/native/lib/: Bindings.re  Bindings_Event.re  Bindings_Fetch.re  Bindings_WebApi.re  Components.re  Components_CountrySelect.re  Components_Layout.re  Components_Select.re  Components_SelectOption.re  Hooks.re  Hooks_useClickOutsideHandler.re  Hooks_useFetch.re  Hooks_useGetCountries.re  Hooks_useVirtualizedCombobox.re  Hooks_useVirtualizedList.re  Pages_CountrySelect.re  Utils.re
src/universal/native/native-bidings/: Bindings_Json.re  Js.re
src/universal/test/: CountrySelect_test.re  Select_test.re  Utils_test.re  useFetch_test.re  useGetCountries_test.re  useVirtualizedCombobox_test.re  useVirtualizedList_test.re
