(executable
 (name server)
 (libraries
  dream
  uri
  cohttp
  cohttp-lwt
  lwt
  lwt.unix
  cohttp-lwt-unix
  universal-portal.server
  server-reason-react.react
  server-reason-react.reactDom
  yojson
  shared_native_demo)
 (preprocess
  (pps server-reason-react.ppx server-reason-react.melange_ppx)))
